Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-11917

One node slow probably due to the Erlang scheduler

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Blocker
    • 4.0.0
    • 3.0
    • view-engine
    • Security Level: Public
    • None
    • Untriaged
    • Unknown

    Description

      One node is slow, that's probably due to the "scheduler collapse" bug in the Erlang VM R16.

      I will try to find a way to verify that it is really the scheduler and no other problem. This is basically a duplicate of MB-9822. Though that bug has a long history, hence I dare to create a new one.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              ericcooper Eric Cooper (Inactive)
              vmx Volker Mische
              Votes:
              0 Vote for this issue
              Watchers:
              12 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                PagerDuty